examples/testing/negative_costs-lower_bounds/ex2.ces

eq(a1(X,Y), 0 ,[a(X , Y)], [X>=100,Y<0]).
eq(a1(X,Y), 0 ,[a(X , Y)], [X>=100,Y>0]).


eq(a(X,Y), Y ,[a(X - 1, Y+1)], [X>=1]).

eq(a(X,Y), 1,[], [X<10]).
